--- a/src/renderer/src/components/DBEmpty/DBEmpty.css
+++ b/src/renderer/src/components/DBEmpty/DBEmpty.css
@@ -1,7 +1,13 @@
-.DBEmpty {
+.HomeLineItem {
   display: flex;
   justify-content: center;
   align-items: center;
   color: white;
-  margin-top: 5%;
+  flex-wrap: wrap;
+  margin-top: 3%;
+}
+
+.HomeLink {
+  text-decoration: none;
+  color: white;
 }
