--- a/src/renderer/src/components/Toolbar/Toolbar.css
+++ b/src/renderer/src/components/Toolbar/Toolbar.css
@@ -11,7 +11,13 @@
 }
 
 .RightToolBarContainer {
-  padding-right: 10;
   color: white;
   margin-left: auto;
+  display: flex;
+  justify-content: center;
+}
+
+.AddIcon {
+  width: 50%;
+  margin: .5em;
 }
