--- a/src/renderer/src/routes/AddMovie/AddMovie.css
+++ b/src/renderer/src/routes/AddMovie/AddMovie.css
@@ -1,6 +1,8 @@
 .AddMovieCheckbox {
-  margin-top: 20px;
   color: white;
+  margin-right: 15px !important;
+  margin-left: 15px !important;
+  margin-bottom: 30px !important;
 }
 
 .AddMovieSubmit {
@@ -8,7 +10,9 @@
 }
 
 .AddMovieField {
-  margin-right: 15px;
+  margin-right: 15px !important;
+  margin-left: 15px !important;
+  margin-bottom: 15px !important;
 }
 
 .SubmitButtonContainer {
@@ -27,4 +31,11 @@
   margin-top: 25px;
   margin-bottom: 25px;
   text-align: center;
+}
+
+.AddMovieFieldRow {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+  justify-content: center;
 }
