Add Movie List page

--- a/src/renderer/src/components/Toolbar/Toolbar.css
+++ b/src/renderer/src/components/Toolbar/Toolbar.css
@@ -17,6 +17,11 @@
   justify-content: center;
 }
 
+.LeftToolBarContainer {
+  margin-left: 5em;
+  font-weight: normal;
+}
+
 .AddIcon {
   width: 50%;
   margin: 0.5em;
