Add delete functionality and initial tmdb integration

--- a/src/renderer/src/routes/MovieList/MovieList.css
+++ b/src/renderer/src/routes/MovieList/MovieList.css
@@ -1,3 +1,10 @@
 .MovieListTable {
   width: 95% !important;
 }
+
+.EmptyMovieList {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  margin-bottom: 10px;
+}
