--- a/src/renderer/src/components/DBEmpty/DBEmpty.css
+++ b/src/renderer/src/components/DBEmpty/DBEmpty.css
@@ -11,3 +11,11 @@
   text-decoration: none;
   color: white;
 }
+
+.ConfigText {
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  margin-top: 10px;
+  width: 100%;
+}
