Add link to /add route from empty movie table

--- a/src/renderer/src/routes/MovieList/MovieList.css
+++ b/src/renderer/src/routes/MovieList/MovieList.css
@@ -3,6 +3,8 @@
 }
 
 .EmptyMovieList {
+  text-decoration: none;
+  color: white;
   display: flex;
   justify-content: center;
   text-align: center;
