--- a/src/renderer/src/routes/MovieList/MovieList.css
+++ b/src/renderer/src/routes/MovieList/MovieList.css
@@ -10,3 +10,12 @@
   text-align: center;
   margin-bottom: 10px;
 }
+
+.FilterSubHeader {
+  color: white;
+  margin-left: auto;
+  margin-right: 15px;
+  margin-top: 10px;
+  display: flex;
+  justify-content: right;
+}
