--- a/src/renderer/src/routes/MovieDetail/MovieDetail.css
+++ b/src/renderer/src/routes/MovieDetail/MovieDetail.css
@@ -1,5 +1,7 @@
 .SearchResultPoster {
-  padding: 10px;
+  margin: 10px;
+  border: 3px solid white;
+  border-radius: 15px;
 }
 
 .SearchResultNoPoster {
@@ -7,7 +9,9 @@
   height: 240px;
   margin: 10px;
   text-align: center;
-  border: solid;
+  color: white;
+  border: 3px solid white;
+  border-radius: 15px;
 }
 
 .DeleteButtonContainer {
@@ -19,4 +23,13 @@
 .DeleteButton {
   margin-left: auto;
   margin-right: 10px;
+}
+
+.MovieDetailContainer {
+  display: flex;
+}
+
+.MovieDetailText {
+  margin-top: 10px;
+  color: white;
 }
